# imc_ros_bridge

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: main.yml  release.yml  test-release.yml
IMC/Base/: Factory.cpp  String.hpp
IMC/Spec/: Abort.hpp  Aborted.hpp  Acceleration.hpp  AcousticLink.hpp  AcousticMessage.hpp  AcousticOperation.hpp  AcousticSystems.hpp  AcousticSystemsQuery.hpp  AirSaturation.hpp  Airflow.hpp  Alignment.hpp  AlignmentState.hpp  AllMessages.hpp  AllocatedControlTorques.hpp  AngularVelocity.hpp  Announce.hpp  AnnounceService.hpp  ApmStatus.hpp  AutonomousSection.hpp  AutopilotMode.hpp  BeamConfig.hpp  Bitfields.hpp  Blob.hpp  Brake.hpp  ButtonEvent.hpp  CacheControl.hpp  Calibration.hpp  CameraZoom.hpp  CcuEvent.hpp  Chlorophyll.hpp  ClockControl.hpp  CloseSession.hpp  Collision.hpp  ColoredDissolvedOrganicMatter.hpp  CommsRelay.hpp  CompassCalibration.hpp  CompressedHistory.hpp  CompressedImage.hpp  Conductivity.hpp  Constants.hpp  (+267 more)
docs/: vehicles.md
include/imc_ros_bridge/: imc_ros_bridge_server.h
include/imc_ros_bridge/imc_to_ros/: Abort.h  Goto.h  Heartbeat.h  PlanControl.h  PlanDB.h
include/imc_ros_bridge/ros_to_imc/: DesiredHeading.h  DesiredHeadingRate.h  DesiredPitch.h  DesiredRoll.h  DesiredSpeed.h  DesiredZ.h  EstimatedState.h  Goto.h  GpsFix.h  GpsNavData.h  Heartbeat.h  PlanControlState.h  PlanDB.h  RemoteState.h  SonarData.h  VehicleState.h
include/imc_tcp_link/: TcpLink.hpp  imc_handle.h
include/imc_udp_link/: udp_link.h
launch/: bridge.launch  bridge_sam.launch
msg/: DesiredSpeed.msg  DesiredZ.msg  EstimatedState.msg  Maneuver.msg  PlanControl.msg  PlanControlState.msg  PlanDB.msg  PlanDBInformation.msg  PlanDBState.msg  PlanManeuver.msg  PlanSpecification.msg  RemoteState.msg  SonarData.msg  VehicleState.msg
neptus_vehicle_definitions/imc_ros_bridge/: 00-imc-ros-bridge.nvcl
neptus_vehicle_definitions/lolo_files/: 00-lolo-auv.nvcl
neptus_vehicle_definitions/sam_files/: 00-sam-auv.nvcl
sam_files/: 00-sam-auv.nvcl
src/: bridge_node.cpp  imc_handle.cpp  imc_to_ros_node.cpp  ros_to_imc_node.cpp  udp_link.cpp
src/imc_to_ros/: Abort.cpp  Goto.cpp  Heartbeat.cpp  PlanControl.cpp  PlanDB.cpp
src/ros_to_imc/: DesiredHeading.cpp  DesiredHeadingRate.cpp  DesiredPitch.cpp  DesiredRoll.cpp  DesiredSpeed.cpp  DesiredZ.cpp  EstimatedState.cpp  Goto.cpp  GpsFix.cpp  GpsNavData.cpp  Heartbeat.cpp  PlanControlState.cpp  PlanDB.cpp  RemoteState.cpp  SonarData.cpp  VehicleState.cpp
vehicles-defs/: 00-lolo-auv.nvcl  00-sam-auv.nvcl
